--- a/Upshot/Base.lproj/Main.storyboard
+++ b/Upshot/Base.lproj/Main.storyboard
@@ -645,13 +645,13 @@
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Upshot" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="0.0"/>
+            <point key="canvasLocation" x="75.5" y="-36"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
-                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
+                <windowController storyboardIdentifier="SettingsWindowController" id="B8D-0N-5wS" customClass="SettingsWindowController" customModule="Upshot" customModuleProvider="target" sceneMemberID="viewController">
+                    <window key="window" title="Upshot" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
@@ -665,19 +665,86 @@
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Upshot" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="SettingsViewController" customModule="Upshot" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tkW-zX-tcZ">
+                                <rect key="frame" x="18" y="213" width="30" height="17"/>
+                                <animations/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="URL" id="Nw9-gU-ACc">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JwO-Tj-5HK">
+                                <rect key="frame" x="66" y="210" width="394" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="rIv-R5-zW5"/>
+                                </constraints>
+                                <animations/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="YsJ-Kf-NMC">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                                <connections>
+                                    <outlet property="delegate" destination="XfG-lQ-9wD" id="6vE-GV-vlz"/>
+                                </connections>
+                            </textField>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" id="TIu-TI-kdy">
+                                <rect key="frame" x="18" y="167" width="115" height="18"/>
+                                <animations/>
+                                <buttonCell key="cell" type="check" title="Launch at login" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="hed-rC-PBf">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="launchAtLoginChangeAction:" target="XfG-lQ-9wD" id="OEr-OM-EHt"/>
+                                </connections>
+                            </button>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" id="pJY-Lh-t3e">
+                                <rect key="frame" x="18" y="123" width="236" height="18"/>
+                                <animations/>
+                                <buttonCell key="cell" type="check" title="Play sound when upload completes" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="7d6-fm-BVX">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="playSoundChangeButton:" target="XfG-lQ-9wD" id="gUG-zF-HJR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="tkW-zX-tcZ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="1Y3-qA-mSW"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="TIu-TI-kdy" secondAttribute="trailing" constant="20" id="9kC-HP-Pup"/>
+                            <constraint firstItem="JwO-Tj-5HK" firstAttribute="centerY" secondItem="tkW-zX-tcZ" secondAttribute="centerY" id="N9E-ck-UB7"/>
+                            <constraint firstItem="JwO-Tj-5HK" firstAttribute="leading" secondItem="tkW-zX-tcZ" secondAttribute="trailing" constant="20" id="Qtx-th-RbJ"/>
+                            <constraint firstItem="pJY-Lh-t3e" firstAttribute="top" secondItem="TIu-TI-kdy" secondAttribute="bottom" constant="30" id="SIn-rf-bi0"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pJY-Lh-t3e" secondAttribute="trailing" constant="20" id="VCN-FV-h1M"/>
+                            <constraint firstItem="TIu-TI-kdy" firstAttribute="top" secondItem="tkW-zX-tcZ" secondAttribute="bottom" constant="30" id="Ziv-dv-MJu"/>
+                            <constraint firstItem="pJY-Lh-t3e" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="hIq-fz-hwD"/>
+                            <constraint firstItem="tkW-zX-tcZ" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="40" id="m3d-W1-a90"/>
+                            <constraint firstItem="TIu-TI-kdy" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="qP4-SH-ISW"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="pJY-Lh-t3e" secondAttribute="bottom" constant="30" id="qwD-if-P9Q"/>
+                            <constraint firstAttribute="trailing" secondItem="JwO-Tj-5HK" secondAttribute="trailing" constant="20" id="uiK-nj-iET"/>
+                        </constraints>
                         <animations/>
                     </view>
+                    <connections>
+                        <outlet property="launchAtLoginButton" destination="TIu-TI-kdy" id="Qcx-kj-jGe"/>
+                        <outlet property="playSoundButton" destination="pJY-Lh-t3e" id="kSh-Ck-n2j"/>
+                        <outlet property="urlTextField" destination="JwO-Tj-5HK" id="Yth-qO-ryz"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="75" y="650"/>
         </scene>
     </scenes>
 </document>
